open and close the collapsed nav menu correctly

--- a/static/style.less
+++ b/static/style.less
@@ -265,8 +265,9 @@ header {
                 width: 100vw;
                 ul .categories {
                     width: 100vw;
-                    background-color: #eee;
+                    background-color: @seriously-pale-grey;
                     padding: 1.5em 2em;
+                    border-top:solid 1px #ccc;
                 }            }
             .logo {
                 display: none;
@@ -281,6 +282,7 @@ header {
                     box-sizing: border-box;
                     padding-left: 2em;
                     text-decoration:none;
+                    background-color:lighten(@seriously-pale-grey,10%)
                 }
             }
         }
